* Fix Pre element display (overflow) on mobile. * Fix Editor Style (WP 4.0 Editor Auto resize feature).

--- a/css/reset.css
+++ b/css/reset.css
@@ -418,8 +418,7 @@ body {
 		font-family: 'Open Sans','Trebuchet MS', sans-serif;
 		background: #fff;
 		color: #444;
-		margin: 0 auto;
-		padding: 20px 20px 0;
+		margin: 20px;
 		border: none;
 		max-width: 100%;
 	}
